tests/NormalTests/paczka1/fuzzy1/10200006.err
Error in line 1: lbauCr0C3zc A362 69,7
Error in line 4: ScuGiF A362 88,1
Error in line 6: Pgen A438 96,8
Error in line 2: kKCcvhEws A362 4,5
Error in line 11: kKCcvhEws A438 99,6
Error in line 5: ScuGiF A438 79,3
Error in line 15: v52 S176 49,2
Error in line 20: v52 A438 34,2
Error in line 14: ScuGiF A834 4,3
Error in line 30: ScuGiF S176 32,9
Error in line 31: ScuGiF A362 7,6
Error in line 32: ScuGiF A438 87,3
